--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,14 @@
                 "css/main.css",
                 "css/markdown.css"
             ]
+        },
+        "header": {
+            "height": "0mm",
+            "content": ""
+        },
+        "footer": {
+            "height": "0mm",
+            "content": ""
         }
     }
 }
